# opentrade

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  README_CN.md  REVIEW_COMPLETION_REPORT.md  ROADMAP.md  SECURITY_FIXES_PLAN.md  docker-compose.yml  package.json  pyproject.toml  test_report_2026-02-18.md
.github/workflows/: ci.yml
backend/: main.py
frontend/: Dockerfile  next.config.js  package.json
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
opentrade/: __init__.py  __version__.py
opentrade/agents/: __init__.py  base.py  coordinator.py  graph.py  macro.py  market.py  onchain.py  risk.py  sentiment.py  strategy.py
opentrade/cli/: __init__.py  __main__.py  app.py  backtest.py  doctor.py  emergency.py  gateway.py  init.py  trade.py  utils.py
opentrade/core/: __init__.py  circuit_breaker.py  config.py  database.py  encryption.py  gateway.py  network.py  order.py  vector_store.py
opentrade/data/: __init__.py  service.py
opentrade/data_sources/: __init__.py  ccxt.py  fred.py  glassnode.py
opentrade/engine/: __init__.py  executor.py
opentrade/evolution/: ga.py
opentrade/models/: __init__.py  position.py  strategy.py  trade.py
opentrade/notifiers/: __init__.py  log.py  telegram.py
opentrade/plugins/: __init__.py  base.py  exchanges.py  manager.py
opentrade/services/: __init__.py  agent_coordinator.py  backtest_engine.py  backtest_service.py  data_quality.py  data_service.py  execution_engine.py  gateway_service.py  lifecycle_manager.py  notification_service.py  risk_engine.py  strategy_service.py  trade_executor.py
opentrade/strategies/: __init__.py  grid_trading.py  mean_reversion.py  scalping.py  trend_following.py
opentrade/web/: __init__.py  api.py  bot.py  config.py
scripts/: daily_workflow.py
tests/: test_core.py
