[project]
name = "opentrade"
description = "OpenTrade - Open Source AI Trading System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "OpenTrade Contributors", email = "contributors@opentrade.ai"}
]
maintainers = [
    {name = "OpenTrade Team", email = "team@opentrade.ai"}
]
keywords = [
    "trading", "ai", "cryptocurrency", "bot", "algorithmic-trading",
    "deep-learning", "langchain", "hyperliquid", "binance"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment"
]

# 动态版本
dynamic = ["version"]

# 依赖 - 核心
dependencies = [
    # 核心框架
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pydantic[email]>=2.5.0",

    # 数据获取
    "ccxt>=4.1.0",
    "yfinance>=0.2.36",
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0",

    # AI / ML
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langgraph>=0.1.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",

    # 数据科学
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "polars>=1.0.0",

    # 机器学习
    "torch>=2.1.0; platform_system != 'Windows' or python_version < '3.12'",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "optuna>=3.5.0",
    "ray[tune]>=2.9.0",

    # 技术指标
    "ta-lib-python>=0.4.25; platform_system != 'Windows'",
    "pandas-ta>=0.3.14b",

    # 数据库
    "sqlalchemy[asyncio]>=2.0.25",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "qdrant-client>=1.7.0",

    # 后端工具
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "structlog>=24.1.0",
    "loguru>=0.7.2",
    "rich>=13.7.0",

    # 定时任务
    "apscheduler>=3.10.4",
    "celery>=5.3.0",

    # 消息通知
    "python-telegram-bot>=20.0",

    # 监控
    "prometheus-client>=0.19.0",

    # 工具
    "click>=8.1.0",
    "typer>=0.9.0",
    "tqdm>=4.66.0",
    "orjson>=3.9.0",
    "msgpack>=1.0.0",
]

# 额外依赖组
[project.optional-dependencies]
# CLI 工具
cli = [
    "rich>=13.7.0",
    "click>=8.1.0",
    "typer>=0.9.0",
    "shellingham>=1.5.0",
    "prompt-toolkit>=3.0.0",
]

# Web 界面
web = [
    "jinja2>=3.1.0",
    "fastapi-static>=0.7.0",
]

# 完整功能
all = [
    "opentrade[cli]",
    "opentrade[web]",
    "opentrade[ml]",
    "opentrade[notification]",
]

# 机器学习
ml = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "optuna>=3.5.0",
    "ray[tune]>=2.9.0",
]

# 通知
notification = [
    "python-telegram-bot>=20.0",
    "slack-sdk>=3.26.0",
    "twilio>=8.11.0",
    "aiofiles>=23.0.0",
]

# 开发工具
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ipdb>=0.13.0",
    "ipython>=8.0.0",
    "pyinstaller>=6.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "wheel>=0.42.0",
]

# 文档
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-autodoc-plugin>=0.5.0",
]

# 质量检查
quality = [
    "opentrade[dev]",
    "types-requests>=2.31.0",
    "types-redis>=4.6.0",
    "types-setuptools>=69.0.0",
]

# PyInstaller 打包
binary = [
    "pyinstaller>=6.0.0",
    "pywin32-ctypes>=0.2.0; platform_system == 'Windows'",
]

# 速率限制扩展
rate-limit = [
    "slowapi>=0.1.0",
    "limiter>=1.4.0",
]

[project.scripts]
opentrade = "opentrade.cli.__main__:main"
opentrade-gateway = "opentrade.cli.gateway:main"
opentrade-trade = "opentrade.cli.trade:main"
opentrade-doctor = "opentrade.cli.doctor:main"
opentrade-backtest = "opentrade.cli.backtest:run"

[project.urls]
Homepage = "https://opentrade.ai"
Repository = "https://github.com/opentrade-ai/opentrade"
Issues = "https://github.com/opentrade-ai/opentrade/issues"
Changelog = "https://github.com/opentrade-ai/opentrade/blob/main/CHANGELOG.md"
Discord = "https://discord.gg/opentrade"
Docs = "https://docs.opentrade.ai"

[project.entry-points]
opentrade.plugins = [
    "trend_following = opentrade.strategies.trend_following:TrendFollowingStrategy",
    "mean_reversion = opentrade.strategies.mean_reversion:MeanReversionStrategy",
    "grid_trading = opentrade.strategies.grid_trading:GridTradingStrategy",
    "scalping = opentrade.strategies.scalping:ScalpingStrategy",
]

opentrade.data_sources = [
    "ccxt = opentrade.data_sources.ccxt:CCXTDataSource",
    "glassnode = opentrade.data_sources.glassnode:GlassnodeDataSource",
    "fred = opentrade.data_sources.fred:FREDDataSource",
]

opentrade.notifiers = [
    "telegram = opentrade.notifiers.telegram:TelegramNotifier",
    "log = opentrade.notifiers.log:LogNotifier",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["opentrade", "opentrade.cli", "opentrade.core", "opentrade.agents", "opentrade.services", "opentrade.models", "opentrade.ml", "opentrade.plugins", "opentrade.strategies", "opentrade.data_sources", "opentrade.notifiers"]
package-dir = {"opentrade" = "opentrade"}
include-package-data = true

[tool.setuptools.package-data]
opentrade = ["py.typed", "*.md", "*.yaml", "*.json"]

[tool.setuptools.dynamic]
version = {attr = "opentrade.__version__"}

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line-length = 100
skip = [".venv", "venv", "node_modules"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ASYNC", # async/await
]
ignore = [
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]
fixable = ["E", "W", "F", "I", "B", "C4", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
strict_equality = true
show_error_codes = true
pretty = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "ccxt.*",
    "pandas.*",
    "numpy.*",
    "torch.*",
    "transformers.*",
    "yfinance.*",
    "ta.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
omit = ["tests/*", "*/__pycache__/*"]
source = ["opentrade"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.codespell]
ignore-words = ".codespell_ignore.txt"

[tool.prompt_toolkit]
magic_commands = ["trade", "backtest", "strategy"]

[tool.hatch]
build.hooks.vcs.version = {name = "version", tag = true}
